[gd_scene load_steps=9 format=2]

[ext_resource path="res://PossessParticles.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/ClickableSkulls.gd" type="Script" id=2]
[ext_resource path="res://Assets/Skull.png" type="Texture" id=3]

[sub_resource type="Shader" id=3]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 flash_color:hint_color=vec4(1.0);
uniform float flash_modifier:hint_range(0.0,1.0)=0;

void fragment(){
	vec4 color=texture(TEXTURE,UV);
	color.rgb=mix(color.rgb,flash_color.rgb,flash_modifier);
	COLOR=color;
}"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 11 )

[sub_resource type="ParticlesMaterial" id=2]
resource_local_to_scene = true
lifetime_randomness = 0.11
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 163.18
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.47
angular_velocity = 10.0
orbit_velocity = -3.0
orbit_velocity_random = 0.0
color = Color( 0.556863, 0.0901961, 0.0901961, 0.384314 )

[sub_resource type="Animation" id=5]
resource_name = "Flash"
length = 0.3
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.831, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 )
}

[node name="ClickableSkulls" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" parent="." instance=ExtResource( 1 )]
scale = Vector2( 1, 1 )
amount = 20
process_material = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Flash"
anims/Flash = SubResource( 5 )

[node name="ClickTime" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_ClickableSkulls_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ClickableSkulls_mouse_exited"]
[connection signal="timeout" from="ClickTime" to="." method="_on_ClickTime_timeout"]
